# lemon

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  RenderDoc.cap  vcpkg.json
demo/: CMakeLists.txt
demo/src/: bundles.cpp  bundles.h  demo.cpp  demo.h  main.cpp  mesh.cpp  mesh.h  metadata.cpp  metadata.h  pseudo.cpp  resource.cpp  shader.cpp  shader.h
demo/src/common/: CameraComponent.cpp  CameraComponent.h  DemoModelActor.cpp  DemoModelActor.h  FlyingCameraActor.cpp  FlyingCameraActor.h  MeshComponent.cpp  MeshComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  MovementComponent.cpp  MovementComponent.h
demo/src/game/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  InputEvent.h  Transform.cpp  Transform.h  common.h  math.cpp  math.h  math.inl  print.h
demo/src/game/actor/: Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  ActorManager.cpp  ActorManager.h  GameObject.cpp  GameObject.h  GameObjectStore.cpp  GameObjectStore.h  GameWorld.cpp  GameWorld.h  TickGroup.cpp  TickGroup.h  common.cpp  common.h
demo/src/render/: RenderPass.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  common.h
demo/src/render/passes/: ColorCorrectionRenderPass.cpp  ColorCorrectionRenderPass.h  DebugUIRenderPass.cpp  DebugUIRenderPass.h  MainRenderPass.cpp  MainRenderPass.h  PostProcessRenderPass.cpp  PostProcessRenderPass.h
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/lemon/: engine.h
engine/core/include/lemon/resource/: ResourceContract.h  ResourceInstance.h  ResourceInstance.inl  ResourceLocation.h  ResourceManager.h  ResourceManager.inl  ResourceMetadata.h  ResourceStore.h  common.h
engine/core/lib/dawn/: CMakeLists.txt  README.md
engine/core/src/: engine.cpp
engine/core/src/device/: Window.cpp  Window.h
engine/core/src/lemon/: Triangle.cpp  Triangle.h  engine.cpp  prelude.h
engine/core/src/lemon/device/: Window.cpp  Window.h
engine/core/src/lemon/resource/: Resource.h  ResourceContract.cpp  ResourceInstance.cpp  ResourceLocation.cpp  ResourceManager.cpp  ResourceStore.cpp  common.cpp
engine/core/src/utils/: utils.cpp  utils.h
engine/include/lemon/: engine.h  game.h  misc.h  platform.h  portability.h  profiling.h  render.h  resources.h  scheduler.h  serialization.h  shared.h
engine/include/lemon/device/: Device.h  GPUDevice.h  Input.h  Platform.h  Window.h  common.h
engine/include/lemon/device/input/: KeyboardListener.h  MouseListener.h  common.h
engine/include/lemon/game/: Camera.h  Transform.h
engine/include/lemon/game/actor/: Actor.h  ActorComponent.h  GameObject.h  GameObjectStore.h  GameWorld.h  TickGroup.h  common.h
engine/include/lemon/game/state/: GameState.h  GameStateManager.h  InputEvent.h
engine/include/lemon/misc/: Delegate.h  Delegate.inl
engine/include/lemon/pch/: cereal.h  dawn.h  imgui.h  inja.h  optick.h
engine/include/lemon/platform/: common.h  windows.h
engine/include/lemon/render/: BindingInitializationHelper.h  BindingLayoutEntryInitializationHelper.h  ComboRenderPassDescriptor.h  ComboRenderPipelineDescriptor.h  ConstantBuffer.h  DebugUI.h  MeshGPUBuffer.h  MeshVertexFormat.h  PipelineManager.h  RenderFrameResources.h  RenderManager.h  RenderPass.h  RenderQueue.h  ResourceCache.h  Shader.h  ShaderCompiler.h  ShaderProgram.h  common.h  utils.h
engine/include/lemon/render/material/: BufferBinding.h  (+9 more)
engine/include/lemon/resource/: ResourceContract.h  ResourceInstance.h  ResourceInstance.inl  ResourceLocation.h  ResourceManager.h  ResourceManager.inl  ResourceMetadata.h  ResourceStore.h  common.h
engine/include/lemon/scheduler/: Scheduler.h  common.h  prelude.h  utils.h
engine/include/lemon/serialization/: DataBuffer.h  common.h  glm.h
engine/include/lemon/shared/: Arena.h  AtomicCache.h  DataBuffer.h  Hash.h  HashStringStore.h  assert.h  filesystem.h
engine/include/lemon/tasks/: filesystem.h
engine/include/lemon/utils/: utils.h
engine/lib/dawn/: CMakeLists.txt  README.md
engine/lib/dawn/lib/: .gitignore
engine/lib/dawn/src/: webgpu_cpp.cpp
engine/lib/dawn_static/: CMakeLists.txt  README.md
engine/lib/imgui/: CMakeLists.txt
engine/scheduler/: CMakeLists.txt
engine/scheduler/include/lemon/: Scheduler.h  prelude.h  scheduler.h
engine/scheduler/src/lemon/: Scheduler.cpp
engine/shared/: CMakeLists.txt
engine/shared/include/lemon/: InlineAllocator.h  containers.h  shared.h
engine/shared/src/lemon/: InlineAllocator.cpp  Vector.cpp
engine/src/lemon/: engine.cpp  prelude.h
engine/src/lemon/device/: Device.cpp  GPUDevice.cpp  Input.cpp  Platform.cpp  Window.cpp
engine/src/lemon/game/: Camera.cpp  Transform.cpp
engine/src/lemon/platform/: windows.cpp
engine/src/lemon/render/: ConstantBuffer.cpp  DebugUI.cpp  MeshGPUBuffer.cpp  MeshVertexFormat.cpp  PipelineManager.cpp  RenderManager.cpp  RenderPass.cpp  RenderQueue.cpp  ResourceCache.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderProgram.cpp  utils.cpp
engine/src/lemon/resource/: ResourceContract.cpp  ResourceInstance.cpp  ResourceLocation.cpp  ResourceManager.cpp  ResourceStore.cpp  common.cpp
engine/src/lemon/scheduler/: Scheduler.cpp  utils.cpp
engine/src/lemon/shared/: HashStringStore.cpp  filesystem.cpp
engine/src/lemon/tasks/: filesystem.cpp
engine/src/lemon/utils/: utils.cpp
engine/utils/: CMakeLists.txt
engine/utils/include/lemon/: debug.h
lib/lemon-shader/: .gclient  .gitignore  CMakeLists.txt  DEPS  README.md
lib/lemon-shader/include/lemon-shader/: ShaderReflection.h  reflection.h
lib/lemon-shader/src/lemon-shader/: ShaderReflection.cpp  reflection.cpp
lib/lemon-shared/: CMakeLists.txt
lib/lemon-shared/include/lemon/: shared.h
test/: CMakeLists.txt
test/src/: AtomicCache.cpp  Delegate.cpp  FreeList.cpp  Memory.cpp  PtrRange.cpp  Singleton.cpp  SlotMap.cpp  UnsafeSingleton.cpp  catch.h  engine_tests.cpp  utils.h
tools/fbx2lem/: CMakeLists.txt
tools/fbx2lem/src/: fbx.cpp  fbx.h  main.cpp
(+175 files in other folders)
